Imprimir primera pag

--- a/Microondas/informeFinal.tex
+++ b/Microondas/informeFinal.tex
@@ -60,7 +60,7 @@
 
 \preprint{APS/123-QED}
 
-\title{Osciloscopio}% Force line breaks with \\
+\title{Microondas}% Force line breaks with \\
 \thanks{}%
 
 \author{Jesus Prada}
@@ -72,7 +72,7 @@
  Departamento de Física, Universidad de los Andes
 }%
 
-\date{13/8/2015}% It is always \today, today,
+\date{10/09/2015}% It is always \today, today,
              %  but any date may be explicitly specified
 
 \begin{abstract}
